--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyBf40lzwqwQzpNVD3W7tDo9jnBLTxj8X9w" />
-        
+
         <activity
             android:name="com.recorridaszo.recorridaszo.MainActivity"
             android:label="@string/app_name" >
@@ -37,6 +37,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.recorridaszo.recorridaszo.VerPersona"
+            android:label="@string/title_activity_ver_persona" >
         </activity>
     </application>
 
